main + footer. html end

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="">Partner</a></li>
           </ul>
         </nav>
-
+        <!-- Кнопки -->
         <ul>
           <li><button type="button">Login</button></li>
           <li>
@@ -27,7 +27,7 @@
         </ul>
 
         <!-- Герой -->
-        <section class="section1">
+        <section class="section-hero">
           <h1>Explore and Travel</h1>
           <h3>Holiday finder</h3>
           <ul>
@@ -63,14 +63,149 @@
       </header>
 
       <main>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <!-- Секция 1 -->
+        <section class="section1">
+          <img
+            src="./images/air-ballons.jpg"
+            alt="Air ballons"
+            width="659"
+            height="534"
+          />
+          <h2>A new way to explore the world</h2>
+          <p>
+            For decades travellers have reached for Lonely Planet books when
+            looking to plan and execute their perfect trip, but now, they can
+            also let Lonely Planet Experiences lead the way
+          </p>
+          <button type="button">Learn more</button>
+        </section>
+
+        <!-- Секция 2 -->
+        <section class="section2">
+          <h2>Featured destinations</h2>
+          <a href="">View all</a>
+          <ul>
+            <li><img src="./images/nature1.jpg" alt="Nature`s photo" /></li>
+            <li><img src="./images/nature2.jpg" alt="" /></li>
+            <li><img src="./images/nature3.jpg" alt="" /></li>
+            <li><img src="./images/nature4.jpg" alt="" /></li>
+          </ul>
+        </section>
+
+        <!-- Секция 3 -->
+        <section class="section3">
+          <h2>Guides by Thousand Sunny</h2>
+          <p>
+            Packed with tips and advice from our on-the-ground experts, our city
+            guides app (iOS and Android) is the ultimate resource before and
+            during a trip.
+          </p>
+          <button type="button">Download</button>
+          <img src="./images/man-with-baggage.jpg" alt="Man with baggage" />
+        </section>
+
+        <!-- Секция 4 -->
+        <section class="section4">
+          <h2>Testimonials</h2>
+          <p>
+            "Quisque in lacus a urna fermentum euismod. Integer mi nibh, dapibus
+            ac scelerisque eu, facilisis quis purus. Morbi blandit sit amet
+            turpis nec"
+          </p>
+          <h3>Edward Newgate</h3>
+          <p>Founder Circle</p>
+          <img src="./images/man-with-camera.jpg" alt="Man with camera" />
+        </section>
+
+        <!-- Секция 5 -->
+        <section class="section5">
+          <h2>Trending stories</h2>
+          <a href="">View all</a>
+          <ul>
+            <li>
+              <img src="./images/yoga.jpg" alt="Yoga" width="261" />
+              <p>The many benefits of taking a healing holiday</p>
+              <p>
+                'Helaing holidays' are on the rise tohelp maximise your health
+                and happines...
+              </p>
+              <a href="">Read more</a>
+            </li>
+            <li>
+              <img src="./images/meals.jpg" alt="Meals" width="261" />
+              <p>The best Kyoto restaurant to try Japanese food</p>
+              <p>
+                From tofu to teahouses, here's our guide to Kyoto's best
+                restaurants to visit...
+              </p>
+              <a href="">Read more</a>
+            </li>
+            <li>
+              <img src="./images/temple.jpg" alt="Temple" width="261" />
+              <p>Skip Chichen Itza and head to this remote Yucatan</p>
+              <p>
+                It's remote and challenging to get, but braving the jungle and
+                exploring these ruins without the...
+              </p>
+              <a href="">Read more</a>
+            </li>
+            <li>
+              <img src="./images/surf.jpg" alt="Surf" width="261" />
+              <p>Surf's up at these beginner spots around the world</p>
+              <p>
+                If learning to surf has in on your to- do list for a while, the
+                good news is: it's never too late...
+              </p>
+              <a href="">Read more</a>
+            </li>
+          </ul>
+        </section>
       </main>
 
-      <footer></footer>
+      <footer>
+        <section class="footer">
+          <!-- Копирайт -->
+          <p>
+            Plan and book your perfect trip with expert advice, travel tips
+            destination information from us
+          </p>
+          <p>&#169;2020 Thousand Sunny. All rights reserved</p>
+
+          <!-- Список услуг -->
+          <ul>
+            <li>
+              <ul>
+                <li>Destinations</li>
+                <li><a href="">Africa</a></li>
+                <li><a href="">Antarctica</a></li>
+                <li><a href="">Asia</a></li>
+                <li><a href="">Europe</a></li>
+                <li><a href="">America</a></li>
+              </ul>
+            </li>
+            <li>
+              <ul>
+                <li>Shop</li>
+                <li><a href="">Destination Guides </a></li>
+                <li><a href="">Pictorial & Gifts</a></li>
+                <li><a href="">Special Offers</a></li>
+                <li><a href="">Delivery Times</a></li>
+                <li><a href="">FAQs</a></li>
+              </ul>
+            </li>
+            <li>
+              <ul>
+                <li>Interests</li>
+                <li><a href="">Adventure Travel </a></li>
+                <li><a href="">Art And Culture</a></li>
+                <li><a href="">Wildlife And Nature</a></li>
+                <li><a href="">Family Holidays</a></li>
+                <li><a href="">Food And Drink</a></li>
+              </ul>
+            </li>
+          </ul>
+        </section>
+      </footer>
     </div>
   </body>
 </html>
